# cli_telegram_controller

./: .env.example  .gitignore  .mcp.json  .scheduled_tasks.json  README.md  balta.py  bot.py  fullstack_proxy.py  linkedin_post.txt  main.py  pyproject.toml  requirements.txt  setup.sh  test_serve.py
.claude/: settings.local.json
.github/workflows/: agente.yml
companion/: __init__.py  app.py  discord_app.py
companion/core/: __init__.py  activity.py  audio.py  auth.py  browser.py  channel_runtime.py  channel_server.py  claude_runtime.py  config.py  paths.py  prompt_optimizer.py  runtime_control.py  scheduler.py  security.py  send_adapter.py  server_runtime.py  state.py  storage.py  system.py  tray_icon.py
companion/handlers/: __init__.py  callbacks.py  commands.py  discord_commands.py  discord_messages.py  messages.py  system_commands.py
images/: slide_01.html  slide_02.html  slide_03.html  slide_04.html  slide_05.html  slide_06.html  slide_07.html  slide_08.html
imágenes/: summary_01.html  summary_02.html
tests/: conftest.py  test_messages_and_system.py  test_runtime_helpers.py  test_security.py  test_storage_and_paths.py
