[project]
name = "claude-code-bot"
version = "0.2.0"
description = "Control Claude Code and Codex from Telegram and Discord"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-telegram-bot~=21.0",
    "python-dotenv~=1.0",
    "anthropic~=0.40",
    "faster-whisper>=1.1.0,<2",
    "pystray~=0.19",
    "pillow~=10.0",
    # Discord bot
    "discord.py>=2.3,<3",
    # Remote Control channel bridge
    "aiohttp>=3.9,<4",
]

[tool.uv]
package = false
