[project]
name = "claude-code-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "python-telegram-bot~=21.0",
    "python-dotenv~=1.0",
    "anthropic~=0.40",
    "faster-whisper>=1.1.0,<2",
    "pystray~=0.19",
    "pillow~=10.0",
    "psutil~=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
